기본 템플릿 예제 추가

--- a/exam1.html
+++ b/exam1.html
@@ -15,13 +15,14 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <style>
-body (
-  padding-top: 50px;
+<style>
+body {
+padding-top: 50px;
 }
+
 .starter-template {
-  padding: 40px 15px;
-  text-aling: center;
+padding: 40px 15px;
+text-align: center;
 }
 </style>
 
